# git_kpis

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  script.py
src/git_kpis/loader/: __init__.py
